--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
     <section class="container">
 
-      <button type=button class="random">Random</button>
+      <button type=button class="random">RANDOM</button>
 
-      <button type="button" class="white">Reset</button>
+      <button type="button" class="white">RESET</button>
 
     </section>
 
