CSS updated to reflect spec

--- a/index.html
+++ b/index.html
@@ -11,15 +11,11 @@
   <body>
 
     <section class="container">
-
-      <button type=button class="random">RANDOM</button>
-
-      <button type="button" class="white">RESET</button>
-
+      <button type=button class="random">Random</button>
+      <button type="button" class="white">Reset</button>
     </section>
 
   </body>
-
 
   <script src="https://code.jquery.com/jquery-2.2.3.js"></script>
   <script src="script.js"></script>
