--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
+
     <link rel="stylesheet" type="text/css" href="normalize.css"/>
-    <link rel="stylesheet" type="text/css" href="style.css">
+
+    <link rel="stylesheet" type="text/css" href="mobile-style.css"/>
+
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:700" rel="stylesheet">
+
     <title>Color Me</title>
   </head>
 
